Overflow mobile hopeful fix

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     grid-template-columns: repeat(2,1fr);
 }
 
+html, body {
+    overflow-x: hidden;
+  }
+
 body{
     margin: 0;
     padding: 0;
